--- a/api/package.json
+++ b/api/package.json
@@ -28,6 +28,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "multer": "^1.4.5-lts.1",
     "prisma": "^4.3.1"
   },
   "devDependencies": {
@@ -35,7 +36,9 @@
     "@prisma/client": "^4.3.1",
     "eslint": "^8.23.1",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-import-resolver-babel-module": "^5.3.1",
     "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-module-resolver": "^1.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1"
