--- a/api/.env.example
+++ b/api/.env.example
@@ -1,1 +1,12 @@
-DATABASE_URL="postgresql://username:password@localhost:5432/webauthdemo?schema=public"
+# Required
+# --------
+
+DATABASE_URL=postgresql://webauthuser:changeme@localhost:5432/web-auth-demo?schema=public
+
+# Optional
+# --------
+
+# PORT=3001
+# ADDRESS=0.0.0.0
+# CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+# CORS_ALLOWED_HEADERS=Content-Type,Authorization
