--- a/api/package.json
+++ b/api/package.json
@@ -27,6 +27,7 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
     "multer": "^1.4.5-lts.1",
     "prisma": "^4.3.1"
